--- a/TableGame.Core/TableGame.Core.csproj
+++ b/TableGame.Core/TableGame.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="5.2.0" />
+  </ItemGroup>
+
 </Project>
