--- a/TableGame.Resource/TableGame.Resource.csproj
+++ b/TableGame.Resource/TableGame.Resource.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TableGame.Core\TableGame.Core.csproj" />
+  </ItemGroup>
+
 </Project>
